# satori-cli

./: .gitignore  Cargo.toml  README.md  TODO.md
src/: cli.rs  display.rs  file_token_storage.rs  interactive_satori.rs  main.rs  mock.rs  parser.rs  prompt.rs  reqwest_satori_client.rs  satori.rs  satori_client.rs  simple_display.rs  simple_html_parser.rs  simple_satori.rs  soup_parser.rs  token.rs  token_storage.rs
