[package]
name = "satori-cli"
version = "0.1.0"
authors = ["mhorod <michalhorodecki2002@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["multipart"] }
tokio = { version = "1.11", features = ["full"] }
lazy_static = "1.4"
regex = "1.5"
soup = "0.5"
itertools = "0.10"
