[package]
name = "satori-cli"
version = "0.1.0"
edition = "2021"


[dependencies]
soup = "0.5.1"
reqwest = { version="0.11.13", features=["cookies", "blocking", "multipart"] }
tokio = { version="1.24.1", features=["full"] }
reqwest_cookie_store = "0.5.0"
rpassword = "7.2.0"
toml = "0.5.10"
cookie = "0.16.2"
shellexpand = "3.0.0"