[package]
name = "satori-cli"
version = "0.1.0"
edition = "2021"


[dependencies]
soup = "0.5.1"
reqwest = { version="0.11.13", features=["cookies", "blocking", "multipart"] }
reqwest_cookie_store = "0.5.0"
rpassword = "7.2.0"
toml = "0.5.10"
cookie = "0.16.2"
shellexpand = "3.0.0"
futures = "0.3.25"